--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,18 @@
-// Place all the styles related to the articles controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#link-write-article{
+  background-color: #F5F5F5;
+  border-radius: 20px;
+  margin: 20px auto;
+  padding: 10px 20px;
+  width: 200px;
+}
+#link-write-article:hover {
+  background-color: #E8E8E8;
+}
+#link-write-article > a {
+  color: #949494;
+}
+#link-write-article > a:hover {
+  text-decoration: none;
+}
+
+
