--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<h1>Articles</h1>
+
+<h3 class="text-center" id="link-write-article"><%= link_to "Write an article", new_article_path %></h3>
+<ul>
+  <% @articles.each do |a| %>
+  <li>
+    <%= link_to article_path(a) do %>
+      <h3><%= a.title %></h3>
+    <% end %>
+    <p><%= a.content %></p>
+  </li>
+  <% end %>
+</ul>
+
+
