--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Articles#show</h1>
-<p>Find me in app/views/articles/show.html.erb</p>
+<h1><%= @article.title %></h1>
+
+<p><%= @article.content %></p>
+
+<%= link_to "Edit this article", edit_article_path %>
+<%= link_to "Delete this article", article_path,
+      method: :delete,
+      data: { confirm: "Are you sure?" } %>
