--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @article.title %></h1>
 
-<p><%= @article.content %></p>
+<%= @article.content.html_safe %>
 
 <%= link_to "Edit this article", edit_article_path %>
 <%= link_to "Delete this article", article_path,
