--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -5,8 +5,19 @@
   </div>
   <div class="form-group">
     <%= f.label :content %>
-    <%= f.text_area :content, class: "form-control", id: "content"%>
+    <%= f.text_area :content, class: "form-control", id: "content-editor"%>
   </div>
   <%= f.submit class: "btn btn-primary" %>
 <% end %>
+
+<script>
+  var textEditor = ace.edit('content-editor');
+  textEditor.setOptions({
+    maxLines: 20,
+    fontSize: 15,
+    fontFamily: "Arial",
+    showGutter: false,
+    wrap: true
+  });
+</script>
 
