--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,10 @@
     <div class="container text-justify">
       <%= yield %>
     </div>
+    <% unless action_name == "index" %>
+      <div class="container link-home">
+       <%= link_to "Return to homepage", articles_path %>
+      </div>
+    <% end %>
   </body>
 </html>
