Created a user controller which allows the creation of a new user through the signup page. Added the bcrypt gem to the Gemfile so that passwords can be secure (User model is using has_secure_password method)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body class="<%= controller_name %> <%= action_name %>">
+    <div class="navbar">
+    </div>
     <div class="container text-justify">
       <%= yield %>
     </div>
