login/signup/logout logic works and there is now a navigation bar at the top which allows you to logout from the wikipedia application

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
     <%= link_to article_path(a) do %>
       <h3><%= a.title %></h3>
     <% end %>
-    <p><%= a.content %></p>
+    <p><%= raw a.content %></p>
   </li>
   <% end %>
 </ul>
