--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -4,6 +4,7 @@
   margin: 20px auto;
   padding: 10px 20px;
   width: 200px;
+  text-decoration: none;
 }
 #link-write-article:hover {
   background-color: #E8E8E8;
@@ -20,5 +21,18 @@
 .link-home {
   margin: 100px auto;
   font-size: 20px;
+}
+#link-modify{
+  margin: 30px 0;
+  font-size: 18px;
+}
+.navigation{
+  display: flex;
+  justify-content: space-between;
+}
+#avatar {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
 
