--- a/app/views/layouts/_linkhomepage.html.erb
+++ b/app/views/layouts/_linkhomepage.html.erb
@@ -1,5 +1,5 @@
-<% unless action_name == "index" %>
+<% unless action_name == "index" || controller_name != "articles" %>
   <div class="container link-home">
-   <%= link_to "Return to homepage", articles_path %>
+   <%= link_to "Return to homepage", root_path %>
   </div>
 <% end %>
